# MoFS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CLI/: CLI.cpp
FTP/: common.h  handles.cpp  server.cpp
Interface/: CLI.cpp
fs/: DiskInode.cpp  MemInode.cpp  MoFSErrno.cpp  OpenFile.cpp  Primitive.cpp  SuperBlock.cpp  User.cpp
fs/device/: Buffer.cpp  DeviceManager.cpp
include/: CLI.h  DirEntry.h  DiskInode.h  File.h  MemInode.h  MoFSErrno.h  OpenFile.h  Primitive.h  SuperBlock.h  User.h
include/device/: Buffer.h  DeviceManager.h
utils/: CmdTools.cpp  CmdTools.h  Diagnose.cpp  Diagnose.h
